--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ img {
   position: absolute;
   width: 100%;
   height: 100vh;
-  background-image: url("/images/pattern-background-mobile.svg");
+  background-image: url("../images/pattern-background-mobile.svg");
   background-color: var(--pale-blue);
   background-repeat: no-repeat;
   z-index: -1;
@@ -37,7 +37,7 @@ img {
 
 @media (min-width: 376px) {
   .overlay-image {
-    background-image: url("/images/pattern-background-desktop.svg");
+    background-image: url("../images/pattern-background-desktop.svg");
     background-size: contain;
   }
 }
